[tool.poetry]
name = "geomapper"
version = "1.0.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.12.5"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.5.3" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.14.2" }
pydantic-settings = "^2.0.3"
prometheus-client = "^0.24.1"
cameratransform = "1.2.1"
geojson-pydantic = "^2.1.0"
shapely = "^2.0.6"
pytest = "9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
